--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ subduction_data*.csv
 grid_data.csv*
 Clennett_data
 outputs*
-figures
 figures.zip
-supplementary_figures
 supplementary_figures.zip
+*.pdf
